--- a/research/manual_test.ipynb
+++ b/research/manual_test.ipynb
@@ -2,28 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('roO5VGxOw2s', 0)"
+       "('https://youtu.be/M2iklVDKsw0', 0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "URL1 = \"https://www.youtube.com/watch?v=roO5VGxOw2s\"\n",
+    "URL1 = \"https://youtu.be/M2iklVDKsw0\"\n",
     "URL1.split(\"=\")[-1], 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "('roO5VGxOw2s', 0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "['https://youtu.be/roO5VGxOw2s?t', '60']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "['https:', '', 'youtu.be', 'roO5VGxOw2s?t']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "'roO5VGxOw2s'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "['https://www.youtube.com/watch?v', 'roO5VGxOw2s&t', '60s']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "'roO5VGxOw2s'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,37 +146,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPYNBrenderer import render_YouTube_video"
+    "from ipynbRenderer import render_YouTube_video"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-07 16:41:12,427: INFO: youtube]: video starts at: 0\n",
-      "[2022-09-07 16:41:12,428: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=0\n"
+      "[2022-09-15 23:47:43,531: INFO: youtube]: video starts at: 0\n",
+      "[2022-09-15 23:47:43,533: INFO: youtube]: embed URL: https://www.youtube.com/embed/M2iklVDKsw0?start=0\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<iframe \n",
-       "            width=\"780\" height=\"600\" \n",
-       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=0\" \n",
-       "            title=\"YouTube video player\" \n",
-       "            frameborder=\"0\" \n",
-       "            allow=\"accelerometer; \n",
-       "            autoplay; clipboard-write; \n",
-       "            encrypted-media; gyroscope; \n",
+       "<iframe\n",
+       "            width=\"780\" height=\"600\"\n",
+       "            src=\"https://www.youtube.com/embed/M2iklVDKsw0?start=0\"\n",
+       "            title=\"YouTube video player\"\n",
+       "            frameborder=\"0\"\n",
+       "            allow=\"accelerometer;\n",
+       "            autoplay; clipboard-write;\n",
+       "            encrypted-media; gyroscope;\n",
        "            picture-in-picture\" allowfullscreen>\n",
        "            </iframe>\n",
        "            "
@@ -194,7 +194,7 @@
        "'success'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,28 +205,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-07 16:41:13,328: INFO: youtube]: video starts at: 0\n",
-      "[2022-09-07 16:41:13,330: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=0\n"
+      "[2022-09-15 23:47:45,197: INFO: youtube]: video starts at: 0\n",
+      "[2022-09-15 23:47:45,198: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=0\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<iframe \n",
-       "            width=\"780\" height=\"600\" \n",
-       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=0\" \n",
-       "            title=\"YouTube video player\" \n",
-       "            frameborder=\"0\" \n",
-       "            allow=\"accelerometer; \n",
-       "            autoplay; clipboard-write; \n",
-       "            encrypted-media; gyroscope; \n",
+       "<iframe\n",
+       "            width=\"780\" height=\"600\"\n",
+       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=0\"\n",
+       "            title=\"YouTube video player\"\n",
+       "            frameborder=\"0\"\n",
+       "            allow=\"accelerometer;\n",
+       "            autoplay; clipboard-write;\n",
+       "            encrypted-media; gyroscope;\n",
        "            picture-in-picture\" allowfullscreen>\n",
        "            </iframe>\n",
        "            "
@@ -244,7 +244,7 @@
        "'success'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,28 +255,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-07 16:41:14,233: INFO: youtube]: video starts at: 60\n",
-      "[2022-09-07 16:41:14,234: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=60\n"
+      "[2022-09-15 23:47:47,563: INFO: youtube]: video starts at: 60\n",
+      "[2022-09-15 23:47:47,564: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=60\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<iframe \n",
-       "            width=\"780\" height=\"600\" \n",
-       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=60\" \n",
-       "            title=\"YouTube video player\" \n",
-       "            frameborder=\"0\" \n",
-       "            allow=\"accelerometer; \n",
-       "            autoplay; clipboard-write; \n",
-       "            encrypted-media; gyroscope; \n",
+       "<iframe\n",
+       "            width=\"780\" height=\"600\"\n",
+       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=60\"\n",
+       "            title=\"YouTube video player\"\n",
+       "            frameborder=\"0\"\n",
+       "            allow=\"accelerometer;\n",
+       "            autoplay; clipboard-write;\n",
+       "            encrypted-media; gyroscope;\n",
        "            picture-in-picture\" allowfullscreen>\n",
        "            </iframe>\n",
        "            "
@@ -294,7 +294,7 @@
        "'success'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "'https://www.youtube.com/watch?v=roO5VGxOw2s&t=60s'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,28 +325,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-09-07 16:41:15,507: INFO: youtube]: video starts at: 60\n",
-      "[2022-09-07 16:41:15,509: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=60\n"
+      "[2022-09-15 23:47:48,980: INFO: youtube]: video starts at: 60\n",
+      "[2022-09-15 23:47:48,981: INFO: youtube]: embed URL: https://www.youtube.com/embed/roO5VGxOw2s?start=60\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<iframe \n",
-       "            width=\"780\" height=\"600\" \n",
-       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=60\" \n",
-       "            title=\"YouTube video player\" \n",
-       "            frameborder=\"0\" \n",
-       "            allow=\"accelerometer; \n",
-       "            autoplay; clipboard-write; \n",
-       "            encrypted-media; gyroscope; \n",
+       "<iframe\n",
+       "            width=\"780\" height=\"600\"\n",
+       "            src=\"https://www.youtube.com/embed/roO5VGxOw2s?start=60\"\n",
+       "            title=\"YouTube video player\"\n",
+       "            frameborder=\"0\"\n",
+       "            allow=\"accelerometer;\n",
+       "            autoplay; clipboard-write;\n",
+       "            encrypted-media; gyroscope;\n",
        "            picture-in-picture\" allowfullscreen>\n",
        "            </iframe>\n",
        "            "
@@ -364,7 +364,7 @@
        "'success'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,9 +375,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'IPYNBrenderer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [61], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_exception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InvalidURLException\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_time_info\u001b[39m(URL: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'IPYNBrenderer'"
+     ]
+    }
+   ],
    "source": [
     "from IPYNBrenderer.custom_exception import InvalidURLException\n",
     "from IPYNBrenderer.logger import logger\n",
@@ -422,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 (conda)",
+   "display_name": "Python 3.8.13",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +610,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9a54a38b40ef06367036eacd27909aaaca05bad8bda386716f795536d4b8961f"
+    "hash": "3b004521ba935f06d4803922e2826529dc81116065066fafe4a2c827dbd1a7a4"
    }
   }
  },
