added site renderer

--- a/research/manual_test.ipynb
+++ b/research/manual_test.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x284ffb69730>"
+       "<IPython.lib.display.IFrame at 0x1f84a0b5e80>"
       ]
      },
      "metadata": {},
