--- a/research/manual_test.ipynb
+++ b/research/manual_test.ipynb
@@ -379,8 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipynbRenderer73 import render_site\n",
-    "from ipynbRenderer73.custom_exception import InvalidURLException"
+    "from ipynbRenderer73 import render_site"
    ]
   },
   {
